# auswertung_fluent

./: CMakeLists.txt  main.cpp
